...
        children: <Widget>[
          FractionallySizedBox(
            widthFactor: MediaQuery.of(context).size.width < 600
                ? 1.0
                : 700 / MediaQuery.of(context).size.width,
            child: TextFormField(
              key: const Key("u_field"),
              controller: username,
              decoration: const InputDecoration(
                prefixIcon: Icon(Icons.face),
                border: OutlineInputBorder(),
                labelText: 'Username',
                labelStyle: TextStyle(fontStyle: FontStyle.italic),
...
          const SizedBox(height: 25),
          FractionallySizedBox(
            widthFactor: MediaQuery.of(context).size.width < 600
                ? 1.0
                : 700 / MediaQuery.of(context).size.width,
            child: TextFormField(
              key: const Key("p_field"),
              controller: password,
              obscureText: _passwordInvisible,
              decoration: InputDecoration(
                prefixIcon: const Icon(Icons.lock_open),
                hintText: 'Password',
                border: const OutlineInputBorder(),
...
          Padding(
            padding: const EdgeInsets.symmetric(vertical: 16),
            child: Center(
              child: SizedBox(
                height: 40,
                child: ElevatedButton(
                  key: const Key("go_login"),
                  onPressed: () async {
                    setState(() {
                      pressed = true;
                    });
                    if (_formKey.currentState!.validate()) {
                      bool check = await _signInWithEmailAndPassword();
...
                      } else {
                        setState(() {
                          pressed = false;
                        });
                        // ignore: use_build_context_synchronously
                        ScaffoldMessenger.of(context).showSnackBar(
                          const SnackBar(content: Text("Account not found...")),
                        );
                      }
                    }
                  },
                  child: Text(
                    pressed ? 'Checking...' : 'Submit',
...
